--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -16,10 +16,11 @@ jobs:
         - name: LMeX Dependencies
           run: .github/workflows/dependencies/peleDeps.sh
         - name: Append
-          run: echo "NewT: $now" >> UnitTests/README.md
+          run: echo "NewT" >> UnitTests/README.md
         - name: Commit results
           run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          git add UnitTests/README.md
           git commit -m 'Append to UnitTest' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
