--- a/.github/workflows/ConvergenceTests.yml
+++ b/.github/workflows/ConvergenceTests.yml
@@ -19,34 +19,31 @@ jobs:
                python3 -m pip install --user matplotlib
         - name: LMeX Dependencies
           run: .github/workflows/dependencies/peleDeps.sh
-        - name: Build AMReX Tools
-          env:
-               AMREX_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX/Submodules/amrex
-          working-directory: ./build/PeleLMeX/Submodules/amrex/Tools/Plotfile
+        - name: Set Environment Variables
           run: |
-              make -j2
+              echo "AMREX_HOME=${{github.workspace}}/build/PeleLMeX/Submodules/amrex" >> $GITHUB_ENV
+              echo "PELE_PHYSICS_HOME=${{github.workspace}}/build/PeleLMeX/Submodules/PelePhysics" >> $GITHUB_ENV
+              echo "AMREX_HYDRO_HOME=${{github.workspace}}/build/PeleLMeX/Submodules/AMReX-Hydro" >> $GITHUB_ENV
+              echo "PELELMEX_HOME=${{github.workspace}}/build/PeleLMeX/" >> $GITHUB_ENV
+        - name: Build AMReX Tools
+          working-directory: ${{env.AMREX_HOME}}/Tools/Plotfile
+          run: |
+              make -j2 VERBOSE=FALSE
         - name: Build PeleLM
-          env:
-               AMREX_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX/Submodules/amrex
-               PELE_PHYSICS_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX/Submodules/PelePhysics
-               AMREX_HYDRO_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX/Submodules/AMReX-Hydro
-               PELELMEX_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX
-          working-directory: ./build/PeleLMeX/Exec/RegTests/PeriodicCases     
+          working-directory: ${{env.PELELMEX_HOME}}/Exec/RegTests/PeriodicCases     
           run: |
               make -j2 TPL COMP=gnu
               make -j2 COMP=gnu
         - name: Run
-          env:
-               AMREX_HOME: ${GITHUB_WORKSPACE}/build/PeleLMeX/Submodules/amrex
-          working-directory: ./build/PeleLMeX/Exec/RegTests/PeriodicCases     
+          working-directory: ${{env.PELELMEX_HOME}}/Exec/RegTests/PeriodicCases     
           run: |
-              cp ${AMREX_HOME}/Tools/Plotfile/fcompare.gnu.ex .
+              cp ${{env.AMREX_HOME}}/Tools/Plotfile/fcompare.gnu.ex .
               sed -i "34s/.*/    resolution = [32,64,128]/" multiRuns.py
               sed -i "s/mpiexec -n 1/mpiexec -n 4 --oversubscribe/g" multiRuns.py
               ./multiRuns.py --test_name GH_CI_CoVo --input_file input.2d_CoVo
               sed -i "49s/.*/    resolution = [32,64,128]/" pprocConvOrder.py
               ./pprocConvOrder.py ./fcompare.gnu.ex --test_name GH_CI_CoVo
-              cp GH_CI_CoVo.png ${GITHUB_WORKSPACE}/ConvergenceTests/
+              cp GH_CI_CoVo.png ${{github.workspace}}/ConvergenceTests/
         - name: Commit results
           run: |
               git config --local user.email "actions@github.com"
