--- a/.github/workflows/ConvergenceTests.yml
+++ b/.github/workflows/ConvergenceTests.yml
@@ -49,6 +49,7 @@ jobs:
           run: |
               git config --local user.email "actions@github.com"
               git config --local user.name "GitHub Actions"
+              git pull
               git add ConvergenceTests/GH_CI_CoVo.png
               git commit -m 'Update Vel-Adv ConvergenceTest' || echo "No changes to commit"
               git push origin || echo "No changes to commit"
@@ -89,7 +90,6 @@ jobs:
               sed -i "34s/.*/    resolution = [32,64,128,256,512]/" multiRuns.py
               sed -i "s/mpiexec -n 1/mpiexec -n 4 --oversubscribe/g" multiRuns.py
               ./multiRuns.py --test_name GH_CI_CoGauS --input_file input.2d_CoGauS
-              ls -ltr GH_CI_CoGauS_plt*
               sed -i '48s/.*/    vars=["density", "Y(N2)", "Y(O2)" ]/' pprocConvOrder.py 
               sed -i "49s/.*/    resolution = [32,64,128,256,512]/" pprocConvOrder.py
               ./pprocConvOrder.py ./fcompare.gnu.ex --test_name GH_CI_CoGauS
@@ -98,6 +98,7 @@ jobs:
           run: |
               git config --local user.email "actions@github.com"
               git config --local user.name "GitHub Actions"
+              git pull
               git add ConvergenceTests/GH_CI_CoGauS.png
               git commit -m 'Update Spec-Adv ConvergenceTest' || echo "No changes to commit"
               git push origin || echo "No changes to commit"
@@ -138,7 +139,6 @@ jobs:
               sed -i "34s/.*/    resolution = [32,64,128,256,512]/" multiRuns.py
               sed -i "s/mpiexec -n 1/mpiexec -n 4 --oversubscribe/g" multiRuns.py
               ./multiRuns.py --test_name GH_CI_CoGauT --input_file input.2d_CoGauT
-              ls -ltr GH_CI_CoGauT_plt*
               sed -i '48s/.*/    vars=["density", "temp", "rhoh" ]/' pprocConvOrder.py 
               sed -i "49s/.*/    resolution = [32,64,128,256,512]/" pprocConvOrder.py
               ./pprocConvOrder.py ./fcompare.gnu.ex --test_name GH_CI_CoGauT
@@ -147,6 +147,7 @@ jobs:
           run: |
               git config --local user.email "actions@github.com"
               git config --local user.name "GitHub Actions"
+              git pull
               git add ConvergenceTests/GH_CI_CoGauT.png
               git commit -m 'Update Temp-Adv ConvergenceTest' || echo "No changes to commit"
               git push origin || echo "No changes to commit"
