--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -2,8 +2,8 @@ name: LMeX_UnitTests
 
 on:
     workflow_dispatch:
-    schedule:
-        - cron: '0 2 * * *'
+##    schedule:
+##        - cron: '0 2 * * *'
 
 jobs:
     UnitsTest:
