--- a/.github/workflows/ConvergenceDiffusion.yml
+++ b/.github/workflows/ConvergenceDiffusion.yml
@@ -40,7 +40,7 @@ jobs:
           run: |
               cp ${{env.AMREX_HOME}}/Tools/Plotfile/fcompare.gnu.ex .
               sed -i "34s/.*/    resolution = [32,64,128,256,512]/" multiRuns.py
-              sed -i "s/mpiexec -n 1/mpiexec -n 2/g" multiRuns.py
+              ##sed -i "s/mpiexec -n 1/mpiexec -n 2/g" multiRuns.py
               ./multiRuns.py --test_name GH_CI_SpecDiff --input_file input.2d_DiffGauS
               ./multiRuns.py --test_name GH_CI_SpecDiffRef --input_file input.2d_DiffGauSRef
               sed -i '48s/.*/    vars=["Y(N2)", "Y(N2a)" ]/' pprocConvOrder.py 
