--- a/.github/workflows/ConvergenceDiffusion.yml
+++ b/.github/workflows/ConvergenceDiffusion.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     CT_DiffusionSpec:
         name: Species-Diffusion
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-18.04
         steps:
         - uses: actions/checkout@v2
         - name: System Dependencies
