--- a/Docs/Makefile
+++ b/Docs/Makefile
@@ -2,8 +2,8 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    ?=
-SPHINXBUILD   ?= sphinx-build
+SPHINXOPTS    =
+SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = PeleLMeX
 SOURCEDIR     = source/manual
 BUILDDIR      = build
