--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Build Reference PeleLMeX
       working-directory: ${{env.PELELMEX_HOME}}/Exec/UnitTests/DodecaneLu
       run: |
-          make -j2 TPL COMP=gnu
-          make -j2 COMP=gnu
+          make -j2 TPL COMP=gnu DEBUG=FALSE
+          make -j2 COMP=gnu DEBUG=FALSE
     - name: Run Reference Case
       working-directory: ${{env.PELELMEX_HOME}}/Exec/UnitTests/DodecaneLu
       run: |
@@ -50,8 +50,8 @@ jobs:
     - name: Build PeleLMeX
       working-directory: ${{env.PELELMEX_HOME}}/Exec/UnitTests/DodecaneLu
       run: |
-          make -j2 TPL COMP=gnu
-          make -j2 COMP=gnu
+          make -j2 TPL COMP=gnu DEBUG=FALSE
+          make -j2 COMP=gnu DEBUG=FALSE
     - name: Run Case
       working-directory: ${{env.PELELMEX_HOME}}/Exec/UnitTests/DodecaneLu
       run: |
